--- a/.env.template
+++ b/.env.template
@@ -16,12 +16,12 @@ BASE_URL=
 # Specify OpenAI organization ID.(optional)
 # Default: Empty
 # If you do not want users to input their own API key, set this value to 1.
-OPENAI_ORG_ID=
+OPENAI_ORG_ID=1
 
 # (optional)
 # Default: Empty
 # If you do not want users to input their own API key, set this value to 1.
-HIDE_USER_API_KEY=
+HIDE_USER_API_KEY=1
 
 # (optional)
 # Default: Empty
