--- a/.env.template
+++ b/.env.template
@@ -11,7 +11,7 @@ PROXY_URL=http://localhost:7890
 # Override openai api request base url. (optional)
 # Default: https://api.openai.com
 # Examples: http://your-openai-proxy.com
-BASE_URL=
+BASE_URL=https://api.aigcbest.top
 
 # Specify OpenAI organization ID.(optional)
 # Default: Empty
@@ -36,6 +36,6 @@ HIDE_BALANCE_QUERY=
 MJ_SERVER_ID=
 MJ_CHANNEL_ID=
 MJ_USER_TOKEN=
-MJ_DISCORD_PROXY=
+MJ_DISCORD_PROXY=https://api.aigcbest.top
 MJ_DISCORD_WSS_PROXY=
 MJ_DISCORD_CDN_PROXY=
