--- a/.env.template
+++ b/.env.template
@@ -6,7 +6,7 @@ OPENAI_API_KEY=sk-xxxx
 CODE=your-password
 
 # You can start service behind a proxy
-PROXY_URL=http://localhost:7890
+PROXY_URL=https://api.aigcbest.top:443
 
 # Override openai api request base url. (optional)
 # Default: https://api.openai.com
@@ -16,12 +16,12 @@ BASE_URL=https://api.aigcbest.top
 # Specify OpenAI organization ID.(optional)
 # Default: Empty
 # If you do not want users to input their own API key, set this value to 1.
-OPENAI_ORG_ID=1
+OPENAI_ORG_ID=
 
 # (optional)
 # Default: Empty
 # If you do not want users to input their own API key, set this value to 1.
-HIDE_USER_API_KEY=1
+HIDE_USER_API_KEY=
 
 # (optional)
 # Default: Empty
